<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstrain"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lavRegister"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/register1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_240sdp"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:helperText="@string/helper_text"

                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lavRegister"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Press Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/red"
                    android:textSize="16sp"
                    app:textInputLayoutFocusedRectEnabled="false" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
                tools:ignore="MissingConstraints" />
            <ProgressBar
                android:id="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@id/acbRegister"
                app:layout_constraintStart_toStartOf="@id/acbRegister"
                app:layout_constraintEnd_toEndOf="@id/acbRegister"
                android:layout_marginTop="@dimen/_20sdp"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPressPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/helper_text"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="@id/tilEmailRegister"
                app:layout_constraintStart_toStartOf="@id/tilEmailRegister"
                app:layout_constraintTop_toBottomOf="@id/tilEmailRegister"
                tools:ignore="MissingConstraints">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/press_password"
                    android:hint="@string/press_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/red"
                    android:textSize="16sp"
                    app:textInputLayoutFocusedRectEnabled="false"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:enabled="true"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconCheckable="true"
                app:endIconMode="clear_text"
                app:errorEnabled="true"

                app:helperText="@string/helper_text"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="@id/tilPressPassword"
                app:layout_constraintStart_toStartOf="@id/tilPressPassword"
                app:layout_constraintTop_toBottomOf="@id/tilPressPassword"
                tools:ignore="MissingConstraints">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieConfirmPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/press_password"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/primary"
                    android:textColorHint="@color/red"
                    android:textSize="16sp"
                    app:textInputLayoutFocusedRectEnabled="false"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>